--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - PC Games</title>
-    <meta name="description"
-        content="Contact PC Games for questions, suggestions, or feedback. Reach out to our team for support and inquiries.">
-    <meta name="keywords" content="PC Games, Contact, Support, Feedback, Gaming">
+    <title>Contact Us - PC Games | Support & Feedback</title>
+    <meta name="description" content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
+    <meta name="keywords" content="PC Games Contact, Support, Feedback, Game Download Help, Gaming Support, PC Game Inquiries, Contact PC Games, Game Issues, Game Suggestions">
     <meta name="author" content="PC Games Team">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://yourdomain.com/contact.html">
+    <meta name="language" content="English">
+    <meta name="theme-color" content="#1a1a1a">
+    <link rel="canonical" href="https://pcgames.com.de/contact.html">
     <!-- Open Graph tags -->
-    <meta property="og:title" content="Contact Us - PC Games">
-    <meta property="og:description"
-        content="Contact PC Games for questions, suggestions, or feedback. Reach out to our team for support and inquiries.">
+    <meta property="og:title" content="Contact Us - PC Games | Support & Feedback">
+    <meta property="og:description" content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/contact.html">
+    <meta property="og:url" content="https://pcgames.com.de/contact.html">
     <meta property="og:site_name" content="PC Games">
+    <meta property="og:image" content="https://pcgames.com.de/images/contact-og.jpg">
     <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Contact Us - PC Games">
-    <meta name="twitter:description"
-        content="Contact PC Games for questions, suggestions, or feedback. Reach out to our team for support and inquiries.">
+    <meta name="twitter:title" content="Contact Us - PC Games | Support & Feedback">
+    <meta name="twitter:description" content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
+    <meta name="twitter:image" content="https://pcgames.com.de/images/contact-og.jpg">
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Structured Data: ContactPage & FAQ -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ContactPage",
+      "mainEntity": {
+        "@type": "Organization",
+        "name": "PC Games",
+        "url": "https://pcgames.com.de/",
+        "logo": "https://pcgames.com.de/images/logo.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+91-8392877813",
+          "contactType": "customer support",
+          "areaServed": "IN",
+          "availableLanguage": ["English", "Hindi"]
+        }
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How can I contact PC Games support?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "You can contact us using the form on this page or via our WhatsApp support link. We usually respond within 24 hours."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What kind of inquiries can I make?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Feel free to ask about game downloads, technical issues, partnership opportunities, or provide suggestions and feedback."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Is my personal information safe when I contact you?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, we value your privacy and your information is used only to respond to your inquiry."
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -74,9 +127,16 @@
         </div>
     </div>
 
+    <!-- Breadcrumbs for SEO and navigation -->
+    <!-- <nav aria-label="Breadcrumb" class="breadcrumb-nav">
+        <ol class="breadcrumb-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html" aria-current="page">Contact Us</a></li>
+        </ol>
+    </nav> -->
     <main class="main-content">
-        <h2>Contact Us</h2>
-        <p>If you have any questions, suggestions, or feedback, please fill out the form below:</p>
+        <h1>Contact Us</h1>
+        <p>If you have any questions, suggestions, or feedback about PC Games, please fill out the form below. Our support team will get back to you as soon as possible.</p>
         <form action="contact_process.php" method="post" aria-label="Contact form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required aria-required="true" autocomplete="name">
@@ -92,9 +152,8 @@
     </main>
 
     <footer class="footer">
-        <a href="https://api.whatsapp.com/send?phone=91A turn-based strategy game that allows you to build and grow an
-                            empire throughout history8392877813">
-            <img src="images/whatsapp2.png" alt="WhatsApp Icon" class="whatsapp-icon">
+        <a href="https://api.whatsapp.com/send?phone=918392877813" aria-label="Chat with us on WhatsApp">
+            <img src="images/whatsapp2.png" alt="Contact PC Games on WhatsApp for support and inquiries" class="whatsapp-icon">
         </a>
         <div class="footer-content">
 
