--- a/index.html
+++ b/index.html
@@ -4,46 +4,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PC Games - Download the Latest Titles</title>
-    <meta name="description"
-        content="Discover the latest and greatest PC games. Download your favorite titles, explore different genres, and join our gaming community.">
-    <meta name="keywords" content="PC games, download games, action games, RPG, adventure games, gaming community">
+    <title>Download PC Games - Latest Action, RPG, Adventure & More | PC Games</title>
+    <meta name="description" content="Download the latest PC games including action, RPG, adventure, shooter, and sports titles. Join our gaming community for reviews, guides, and safe downloads.">
+    <meta name="keywords" content="PC games, download PC games, action games, RPG, adventure games, shooter games, sports games, PC game reviews, free PC games, latest PC games, gaming community, game guides, safe downloads">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://pcgames.com.de/">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="PC Games Team">
+    <meta name="language" content="English">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#181a1b">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="PC Games - Download the Latest Titles" />
-    <meta property="og:description"
-        content="Discover the latest and greatest PC games. Download your favorite titles, explore different genres, and join our gaming community." />
+    <meta property="og:title" content="Download PC Games - Latest Action, RPG, Adventure & More | PC Games" />
+    <meta property="og:description" content="Download the latest PC games including action, RPG, adventure, shooter, and sports titles. Join our gaming community for reviews, guides, and safe downloads." />
     <meta property="og:image" content="https://pcgames.com.de/images/og-image.png" />
-    <meta property="og:url" content="https://pcgames.com.de//" />
-    <meta property="og:type" content="video.game" />
+    <meta property="og:url" content="https://pcgames.com.de/" />
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="PC Games" />
     <meta property="og:locale" content="en_US" />
 
+    <!-- Structured Data: Homepage & Games -->
     <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "PC Games",
+      "url": "https://pcgames.com.de/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://pcgames.com.de/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
         {
-          "@context": "https://schema.org",
-          "@type": "VideoGame",
-          "name": "Cyberpunk 2077",
-          "image": "https://pcgames.com.de/images/games.jpg",
-          "description": "An open-world action-adventure RPG set in the megalopolis of Night City.",
-          "genre": "Action RPG",
+          "@type": "ListItem",
+          "position": 1,
           "url": "https://pcgames.com.de/cyberpunk-2077",
-          "aggregateRating": {
-            "@type": "AggregateRating",
-            "ratingValue": "4.5",
-            "ratingCount": "1000"
+          "name": "Cyberpunk 2077"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "url": "https://pcgames.com.de/red-dead-redemption-2",
+          "name": "Red Dead Redemption 2"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "url": "https://pcgames.com.de/elden-ring",
+          "name": "Elden Ring"
+        }
+        
+      ]
+    }
+    </script>
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How can I download PC games safely?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Always download PC games from trusted sources like our website. We verify all links for safety and authenticity."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are the games free to download?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Some games are free while others may require a purchase. Check the game details for more information."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What genres of PC games are available?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We offer action, RPG, adventure, shooter, sports, simulation, horror, and many more genres."
           }
         }
-        </script>
+      ]
+    }
+    </script>
 </head>
 
 <body>
-    <!-- <h1>Welcome to PC Games</h1>
-    <h2>Popular Games</h2> -->
+    <!-- <h1>Download Latest PC Games - Action, RPG, Adventure & More</h1> -->
+    <!-- Breadcrumbs for SEO -->
+    <!-- <nav aria-label="Breadcrumb" class="breadcrumbs">
+      <ol>
+        <li><a href="index.html">Home</a></li>
+        <li>Popular Games</li>
+      </ol>
+    </nav> -->
     <nav class="navbar">
         <div class="left-section">
             <div class="logo">
@@ -191,21 +258,21 @@
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide active">
-                        <img src="images/slider.png" alt="Assassin's Creed Valhalla - Download Now">
+                        <img src="images/slider.png" alt="Assassin's Creed Valhalla PC Game Download - Latest Version, Action Adventure">
                         <div class="slide-content">
                             <h2>Assassin's Creed Valhalla</h2>
                             <p>Become a legendary Viking warrior raised on tales of battle and glory.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/slider1.jpg" alt="Call of Duty: Modern Warfare">
+                        <img src="images/slider1.jpg" alt="Call of Duty: Modern Warfare PC Game Download - Shooter, Multiplayer">
                         <div class="slide-content">
                             <h2>Call of Duty: Modern Warfare</h2>
                             <p>Experience the ultimate online multiplayer battlefield.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/slider2.jpg" alt="FIFA 24">
+                        <img src="images/slider2.jpg" alt="FIFA 24 PC Game Download - Sports, Football">
                         <div class="slide-content">
                             <h2>FIFA 24</h2>
                             <p>The world's most popular football game returns.</p>
@@ -229,7 +296,7 @@
                 <!-- Game Card 1 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games.jpg" alt="Cyberpunk 2077">
+                        <img src="images/games.jpg" alt="Cyberpunk 2077 PC Game Download - Action RPG, Open World">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -264,7 +331,7 @@
                 <!-- Game Card 2 -->
                 <div class="game-card" data-genre="action adventure">
                     <div class="game-image">
-                        <img src="images/games1.jpg" alt="Red Dead Redemption 2">
+                        <img src="images/games1.jpg" alt="Red Dead Redemption 2 PC Game Download - Action Adventure, Open World">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -298,7 +365,7 @@
                 <!-- Game Card 3 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games2.jpg" alt="Elden Ring">
+                        <img src="images/games2.jpg" alt="Elden Ring PC Game Download - Action RPG, Fantasy">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -332,7 +399,7 @@
                 <!-- Game Card 4 -->
                 <div class="game-card" data-genre="action adventure">
                     <div class="game-image">
-                        <img src="images/games3.png" alt="God of War">
+                        <img src="images/games3.png" alt="God of War PC Game Download - Action Adventure, Norse Mythology">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -367,7 +434,7 @@
                 <!-- Game Card 5 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games4.png" alt="Resident Evil 2">
+                        <img src="images/games4.png" alt="Resident Evil 2 Remake PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -402,7 +469,7 @@
                 <!-- Game Card 6 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games6.jpg" alt="Resident Evil 3">
+                        <img src="images/games6.jpg" alt="Resident Evil 3 Remake PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -437,7 +504,7 @@
                 <!-- Game Card 7 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games7.jpeg" alt="Resident Evil 4">
+                        <img src="images/games7.jpeg" alt="Resident Evil 4 Remake PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -472,7 +539,7 @@
                 <!-- Game Card 8 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games8.jpeg" alt="Resident Evil 5">
+                        <img src="images/games8.jpeg" alt="Resident Evil 5 PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -507,7 +574,7 @@
                 <!-- Game Card 9 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games9.jpg" alt="Resident Evil 6">
+                        <img src="images/games9.jpg" alt="Resident Evil 6 PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -542,7 +609,7 @@
                 <!-- Game Card 10 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games10.jpeg" alt="Resident Evil 7">
+                        <img src="images/games10.jpeg" alt="Resident Evil 7 Biohazard PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -577,7 +644,7 @@
                 <!-- Game Card 11 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games11.jpeg" alt="Resident Evil 8">
+                        <img src="images/games11.jpeg" alt="Resident Evil 8 Village PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -613,7 +680,7 @@
                 <!-- Game Card 12 -->
                 <div class="game-card" data-genre="action shooter">
                     <div class="game-image">
-                        <img src="images/games5.jpg" alt="Sniper Elite 4">
+                        <img src="images/games5.jpg" alt="Sniper Elite 4 PC Game Download - Action Shooter, Stealth">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -648,7 +715,7 @@
                 <!-- Game Card 13 -->
                 <div class="game-card" data-genre="action shooter">
                     <div class="game-image">
-                        <img src="images/games12.jpg" alt="Sniper Elite 5">
+                        <img src="images/games12.jpg" alt="Sniper Elite 5 PC Game Download - Action Shooter, Stealth">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -680,7 +747,7 @@
                 <!-- Game Card 14 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2">
+                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2 PC Game Download - Action RPG, Fantasy">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -714,7 +781,7 @@
                 <!-- Game Card 15 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games14.jpeg" alt="Silent Hill 2 Remake">
+                        <img src="images/games14.jpeg" alt="Silent Hill 2 Remake PC Game Download - Action Horror, Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -749,7 +816,7 @@
                 <!-- Game Card 16 -->
                 <div class="game-card" data-genre="action fps">
                     <div class="game-image">
-                        <img src="images/games15.jpeg" alt="Wrath: Aeon of Ruin">
+                        <img src="images/games15.jpeg" alt="Wrath: Aeon of Ruin PC Game Download - Action FPS, Retro">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -783,7 +850,7 @@
                 <!-- Game Card 17 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games16.jpeg" alt="The Thaumaturge">
+                        <img src="images/games16.jpeg" alt="The Thaumaturge PC Game Download - Action RPG, Occult">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -817,7 +884,7 @@
                 <!-- Game Card 18 -->
                 <div class="game-card" data-genre="action simulation">
                     <div class="game-image">
-                        <img src="images/games17.jpeg" alt="Lightyear Frontier">
+                        <img src="images/games17.jpeg" alt="Lightyear Frontier PC Game Download - Farming Simulation, Mech">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -1023,7 +1090,7 @@
                 <!-- Game Card 24 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2">
+                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2 PC Game Download - Action RPG, Fantasy">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
