--- a/new-game.html
+++ b/new-game.html
@@ -4,44 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PC Games - Download the Latest Titles</title>
-    <meta name="description"
-        content="Discover the latest and greatest PC games. Download your favorite titles, explore different genres, and join our gaming community.">
-    <meta name="keywords" content="PC games, download games, action games, RPG, adventure games, gaming community">
+    <title>New PC Games 2025 - Download Latest Releases | PC Games</title>
+    <meta name="description" content="Download new PC games released in 2025. Find the latest action, RPG, adventure, and strategy games. Safe downloads, reviews, and community updates.">
+    <meta name="keywords" content="new PC games, latest PC games 2025, download new games, action games, RPG, adventure games, strategy games, PC game reviews, safe downloads">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="https://pcgames.com.de/">
+    <link rel="canonical" href="https://pcgames.com.de/new-game.html">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="PC Games Team">
+    <meta name="language" content="English">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#181a1b">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="PC Games - Download the Latest Titles" />
-    <meta property="og:description"
-        content="Discover the latest and greatest PC games. Download your favorite titles, explore different genres, and join our gaming community." />
+    <meta property="og:title" content="New PC Games 2025 - Download Latest Releases | PC Games" />
+    <meta property="og:description" content="Download new PC games released in 2025. Find the latest action, RPG, adventure, and strategy games. Safe downloads, reviews, and community updates." />
     <meta property="og:image" content="https://pcgames.com.de/images/og-image.png" />
-    <meta property="og:url" content="https://pcgames.com.de//" />
-    <meta property="og:type" content="video.game" />
+    <meta property="og:url" content="https://pcgames.com.de/new-game.html" />
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="PC Games" />
     <meta property="og:locale" content="en_US" />
 
+    <!-- Structured Data: New Games List -->
     <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "name": "New PC Games 2025",
+      "itemListElement": [
+        {"@type": "ListItem", "position": 1, "url": "https://pcgames.com.de/dragons-dogma-2", "name": "Dragon's Dogma 2"},
+        {"@type": "ListItem", "position": 2, "url": "https://pcgames.com.de/silent-hill-2-remake", "name": "Silent Hill 2 Remake"},
+        {"@type": "ListItem", "position": 3, "url": "https://pcgames.com.de/wrath-aeon-of-ruin", "name": "Wrath: Aeon of Ruin"},
+        {"@type": "ListItem", "position": 4, "url": "https://pcgames.com.de/the-thaumaturge", "name": "The Thaumaturge"},
+        {"@type": "ListItem", "position": 5, "url": "https://pcgames.com.de/lightyear-frontier", "name": "Lightyear Frontier"},
+        {"@type": "ListItem", "position": 6, "url": "https://pcgames.com.de/south-park-snow-day", "name": "South Park: Snow Day"},
+        {"@type": "ListItem", "position": 7, "url": "https://pcgames.com.de/pepper-grinder", "name": "Pepper Grinder"},
+        {"@type": "ListItem", "position": 8, "url": "https://pcgames.com.de/neva", "name": "Neva"},
+        {"@type": "ListItem", "position": 9, "url": "https://pcgames.com.de/ara-history-untold", "name": "Ara: History Untold"}
+      ]
+    }
+    </script>
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
         {
-          "@context": "https://schema.org",
-          "@type": "VideoGame",
-          "name": "Cyberpunk 2077",
-          "image": "https://pcgames.com.de/images/games.jpg",
-          "description": "An open-world action-adventure RPG set in the megalopolis of Night City.",
-          "genre": "Action RPG",
-          "url": "https://pcgames.com.de/cyberpunk-2077",
-          "aggregateRating": {
-            "@type": "AggregateRating",
-            "ratingValue": "4.5",
-            "ratingCount": "1000"
-          }
+          "@type": "Question",
+          "name": "How do I download the latest PC games?",
+          "acceptedAnswer": {"@type": "Answer", "text": "Click the download button on your chosen game card for a direct or torrent download. All links are verified for safety."}
+        },
+        {
+          "@type": "Question",
+          "name": "Are the new games free to download?",
+          "acceptedAnswer": {"@type": "Answer", "text": "Some games are free, while others may require a purchase. Please check each game's details."}
+        },
+        {
+          "@type": "Question",
+          "name": "What genres of new PC games are available?",
+          "acceptedAnswer": {"@type": "Answer", "text": "We offer action, RPG, strategy, adventure, simulation, horror, and more genres in our new releases."}
         }
-        </script>
+      ]
+    }
+    </script>
 </head>
 
 <body>
+    <!-- <h1>New PC Games 2025 - Download Latest Releases</h1> -->
+    <!-- Breadcrumbs for SEO -->
+    <!-- <nav aria-label="Breadcrumb" class="breadcrumbs">
+      <ol>
+        <li><a href="index.html">Home</a></li>
+        <li>New Games</li>
+      </ol>
+    </nav> -->
     <nav class="navbar">
         <div class="left-section">
             <div class="logo">
@@ -189,21 +227,21 @@
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide active">
-                        <img src="images/slider.png" alt="Featured Game 1">
+                        <img src="images/slider.png" alt="Assassin's Creed Valhalla PC Game Download - Action Adventure, New Release">
                         <div class="slide-content">
                             <h2>Assassin's Creed Valhalla</h2>
                             <p>Become a legendary Viking warrior raised on tales of battle and glory.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/slider1.jpg" alt="Featured Game 2">
+                        <img src="images/slider1.jpg" alt="Call of Duty: Modern Warfare PC Game Download - Shooter, New Release">
                         <div class="slide-content">
                             <h2>Call of Duty: Modern Warfare</h2>
                             <p>Experience the ultimate online multiplayer battlefield.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/slider2.jpg" alt="Featured Game 3">
+                        <img src="images/slider2.jpg" alt="FIFA 24 PC Game Download - Sports, New Release">
                         <div class="slide-content">
                             <h2>FIFA 24</h2>
                             <p>The world's most popular football game returns.</p>
@@ -227,7 +265,7 @@
                 <!-- Game Card 14 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2">
+                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2 PC Game Download - Action RPG, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -261,7 +299,7 @@
                 <!-- Game Card 15 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games14.jpeg" alt="Silent Hill 2 Remake">
+                        <img src="images/games14.jpeg" alt="Silent Hill 2 Remake PC Game Download - Action Horror, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -296,7 +334,7 @@
                 <!-- Game Card 16 -->
                 <div class="game-card" data-genre="action fps">
                     <div class="game-image">
-                        <img src="images/games15.jpeg" alt="Wrath: Aeon of Ruin">
+                        <img src="images/games15.jpeg" alt="Wrath: Aeon of Ruin PC Game Download - Action FPS, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -330,7 +368,7 @@
                 <!-- Game Card 17 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games16.jpeg" alt="The Thaumaturge">
+                        <img src="images/games16.jpeg" alt="The Thaumaturge PC Game Download - Action RPG, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -364,7 +402,7 @@
                 <!-- Game Card 18 -->
                 <div class="game-card" data-genre="action simulation">
                     <div class="game-image">
-                        <img src="images/games17.jpeg" alt="Lightyear Frontier">
+                        <img src="images/games17.jpeg" alt="Lightyear Frontier PC Game Download - Farming Simulation, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -398,7 +436,7 @@
                 <!-- Game Card 19 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games18.jpg" alt="South Park: Snow Day">
+                        <img src="images/games18.jpg" alt="South Park: Snow Day PC Game Download - Action RPG, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -432,7 +470,7 @@
                 <!-- Game Card 20 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games19.jpeg" alt="Pepper Grinde">
+                        <img src="images/games19.jpeg" alt="Pepper Grinder PC Game Download - Action Horror, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -466,7 +504,7 @@
                 <!-- Game Card 21 -->
                 <div class="game-card" data-genre="action adventure">
                     <div class="game-image">
-                        <img src="images/games20.jpg" alt="Neva">
+                        <img src="images/games20.jpg" alt="Neva PC Game Download - Action Adventure, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -500,7 +538,7 @@
                 <!-- Game Card 22 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games21.jpg" alt="Ara: History Untold">
+                        <img src="images/games21.jpg" alt="Ara: History Untold PC Game Download - Action Strategy, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
