--- a/top-games.html
+++ b/top-games.html
@@ -4,44 +4,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PC Games - Download the Latest Titles</title>
-    <meta name="description"
-        content="Discover the latest and greatest PC games. Download your favorite titles, explore different genres, and join our gaming community.">
-    <meta name="keywords" content="PC games, download games, action games, RPG, adventure games, gaming community">
+    <title>Top PC Games 2025 - Best Downloads & Reviews | PC Games</title>
+    <meta name="description" content="Download the top PC games of 2025. Explore the best action, RPG, adventure, and shooter games. Read reviews, safe download links, and join our gaming community.">
+    <meta name="keywords" content="top PC games, best PC games 2025, download top games, action games, RPG, adventure games, shooter games, PC game reviews, safe downloads">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="https://pcgames.com.de/">
+    <link rel="canonical" href="https://pcgames.com.de/top-games.html">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="PC Games Team">
+    <meta name="language" content="English">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#181a1b">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="PC Games - Download the Latest Titles" />
-    <meta property="og:description"
-        content="Discover the latest and greatest PC games. Download your favorite titles, explore different genres, and join our gaming community." />
+    <meta property="og:title" content="Top PC Games 2025 - Best Downloads & Reviews | PC Games" />
+    <meta property="og:description" content="Download the top PC games of 2025. Explore the best action, RPG, adventure, and shooter games. Read reviews, safe download links, and join our gaming community." />
     <meta property="og:image" content="https://pcgames.com.de/images/og-image.png" />
-    <meta property="og:url" content="https://pcgames.com.de//" />
-    <meta property="og:type" content="video.game" />
+    <meta property="og:url" content="https://pcgames.com.de/top-games.html" />
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="PC Games" />
     <meta property="og:locale" content="en_US" />
 
+    <!-- Structured Data: Top Games List -->
     <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "name": "Top PC Games 2025",
+      "itemListElement": [
+        {"@type": "ListItem", "position": 1, "url": "https://pcgames.com.de/alan-wake-2", "name": "Alan Wake 2"},
+        {"@type": "ListItem", "position": 2, "url": "https://pcgames.com.de/dragons-dogma-2", "name": "Dragon's Dogma 2"},
+        {"@type": "ListItem", "position": 3, "url": "https://pcgames.com.de/metaphor-refantazio", "name": "Metaphor: ReFantazio"},
+        {"@type": "ListItem", "position": 4, "url": "https://pcgames.com.de/pacific-drive", "name": "Pacific Drive"},
+        {"@type": "ListItem", "position": 5, "url": "https://pcgames.com.de/palworld", "name": "Palworld"},
+        {"@type": "ListItem", "position": 6, "url": "https://pcgames.com.de/enshrouded", "name": "Enshrouded"},
+        {"@type": "ListItem", "position": 7, "url": "https://pcgames.com.de/the-witcher-3", "name": "The Witcher 3: Wild Hunt"},
+        {"@type": "ListItem", "position": 8, "url": "https://pcgames.com.de/doom-eternal", "name": "DOOM Eternal"},
+        {"@type": "ListItem", "position": 9, "url": "https://pcgames.com.de/minecraft", "name": "Minecraft"},
+        {"@type": "ListItem", "position": 10, "url": "https://pcgames.com.de/valorant", "name": "Valorant"},
+        {"@type": "ListItem", "position": 11, "url": "https://pcgames.com.de/league-of-legends", "name": "League of Legends"},
+        {"@type": "ListItem", "position": 12, "url": "https://pcgames.com.de/call-of-duty-modern-warfare-ii", "name": "Call of Duty: Modern Warfare II"},
+        {"@type": "ListItem", "position": 13, "url": "https://pcgames.com.de/hades", "name": "Hades"},
+        {"@type": "ListItem", "position": 14, "url": "https://pcgames.com.de/baldurs-gate-3", "name": "Baldur's Gate 3"},
+        {"@type": "ListItem", "position": 15, "url": "https://pcgames.com.de/apex-legends", "name": "Apex Legends"}
+      ]
+    }
+    </script>
+    <!-- FAQ Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
         {
-          "@context": "https://schema.org",
-          "@type": "VideoGame",
-          "name": "Cyberpunk 2077",
-          "image": "https://pcgames.com.de/images/games.jpg",
-          "description": "An open-world action-adventure RPG set in the megalopolis of Night City.",
-          "genre": "Action RPG",
-          "url": "https://pcgames.com.de/cyberpunk-2077",
-          "aggregateRating": {
-            "@type": "AggregateRating",
-            "ratingValue": "4.5",
-            "ratingCount": "1000"
-          }
+          "@type": "Question",
+          "name": "How are top PC games ranked?",
+          "acceptedAnswer": {"@type": "Answer", "text": "Top PC games are ranked based on user ratings, downloads, and popularity in the gaming community."}
+        },
+        {
+          "@type": "Question",
+          "name": "Are these top PC games free to download?",
+          "acceptedAnswer": {"@type": "Answer", "text": "Some top games are free, while others may require a purchase. Please check each game's details."}
+        },
+        {
+          "@type": "Question",
+          "name": "How do I download a top PC game?",
+          "acceptedAnswer": {"@type": "Answer", "text": "Click the download button on your chosen game card for a direct or torrent download. All links are verified for safety."}
         }
-        </script>
-</head>
+      ]
+    }
+    </script>
+</head> 
 
 <body>
+    <!-- <h1>Top PC Games 2025 - Best Downloads & Reviews</h1> -->
+    <!-- Breadcrumbs for SEO -->
+    <!-- <nav aria-label="Breadcrumb" class="breadcrumbs">
+      <ol>
+        <li><a href="index.html">Home</a></li>
+        <li>Top Games</li>
+      </ol>
+    </nav> -->
     <nav class="navbar">
         <div class="left-section">
             <div class="logo">
@@ -189,21 +233,21 @@
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide active">
-                        <img src="images/slider.png" alt="Featured Game 1">
+                        <img src="images/slider.png" alt="Assassin's Creed Valhalla PC Game Download - Top Action Adventure">
                         <div class="slide-content">
                             <h2>Assassin's Creed Valhalla</h2>
                             <p>Become a legendary Viking warrior raised on tales of battle and glory.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/slider1.jpg" alt="Featured Game 2">
+                        <img src="images/slider1.jpg" alt="Call of Duty: Modern Warfare PC Game Download - Top Shooter">
                         <div class="slide-content">
                             <h2>Call of Duty: Modern Warfare</h2>
                             <p>Experience the ultimate online multiplayer battlefield.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/slider2.jpg" alt="Featured Game 3">
+                        <img src="images/slider2.jpg" alt="FIFA 24 PC Game Download - Top Sports Game">
                         <div class="slide-content">
                             <h2>FIFA 24</h2>
                             <p>The world's most popular football game returns.</p>
@@ -227,7 +271,7 @@
                 <!-- Game Card 23 -->
                 <div class="game-card" data-genre="action survival horror">
                     <div class="game-image">
-                        <img src="images/games22.jpeg" alt="Alan Wake 2">
+                        <img src="images/games22.jpeg" alt="Alan Wake 2 PC Game Download - Top Survival Horror 2025">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -262,7 +306,7 @@
                 <!-- Game Card 24 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games13.jpeg" alt="Dragon’s Dogma 2">
+                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2 PC Game Download - Top Action RPG 2025">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -296,7 +340,7 @@
                 <!-- Game Card 25 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games23.jpeg" alt="Metaphor: ReFantazio">
+                        <img src="images/games23.jpeg" alt="Metaphor: ReFantazio PC Game Download - Top RPG 2025">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -330,7 +374,7 @@
                 <!-- Game Card 26 -->
                 <div class="game-card" data-genre="action survival">
                     <div class="game-image">
-                        <img src="images/games24.jpg" alt="Pacific Drive">
+                        <img src="images/games24.jpg" alt="Pacific Drive PC Game Download - Top Survival 2025">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -365,7 +409,7 @@
                 <!-- Game Card 27 -->
                 <div class="game-card" data-genre="action adventure">
                     <div class="game-image">
-                        <img src="images/games25.jpeg" alt="Palworld">
+                        <img src="images/games25.jpeg" alt="Palworld PC Game Download - Top Adventure 2025">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -398,7 +442,7 @@
                 <!-- Game Card 28 -->
                 <div class="game-card" data-genre="action survival">
                     <div class="game-image">
-                        <img src="images/games26.jpeg" alt="Enshrouded">
+                        <img src="images/games26.jpeg" alt="Enshrouded PC Game Download - Top Survival 2025">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -536,7 +580,7 @@
                 <!-- Game Card 29 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games28.jpg" alt="The Witcher 3">
+                        <img src="images/games28.jpg" alt="The Witcher 3 Wild Hunt PC Game Download - Top Open World RPG">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -571,7 +615,7 @@
                 <!-- Game Card 30 -->
                 <div class="game-card" data-genre="action adventure">
                     <div class="game-image">
-                        <img src="images/games29.jpg" alt=" DOOM Eternal">
+                        <img src="images/games29.jpg" alt="DOOM Eternal PC Game Download - Top FPS 2025">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -605,7 +649,7 @@
                 <!-- Game Card 31 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games30.jpeg" alt=" Minecraft">
+                        <img src="images/games30.jpeg" alt="Minecraft PC Game Download - Top Sandbox Survival">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -639,7 +683,7 @@
                 <!-- Game Card 32 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games31.jpeg" alt=" Valorant">
+                        <img src="images/games31.jpeg" alt="Valorant PC Game Download - Top Tactical Shooter">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -672,7 +716,7 @@
                 <!-- Game Card 34 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games32.jpeg" alt="  League of Legends">
+                        <img src="images/games32.jpeg" alt="League of Legends PC Game Download - Top MOBA">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -706,7 +750,7 @@
                 <!-- Game Card 35 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games33.webp" alt="  Call of Duty: Modern Warfare II">
+                        <img src="images/games33.webp" alt="Call of Duty: Modern Warfare II PC Game Download - Top FPS">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -740,7 +784,7 @@
                 <!-- Game Card 36 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games34.jpg" alt="Hades">
+                        <img src="images/games34.jpg" alt="Hades PC Game Download - Top Roguelike">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -774,7 +818,7 @@
                 <!-- Game Card 37 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games35.jpeg" alt="Baldur's Gate 3">
+                        <img src="images/games35.jpeg" alt="Baldur's Gate 3 PC Game Download - Top RPG">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -808,7 +852,7 @@
                 <!-- Game Card 38 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games36" alt="Apex Legends">
+                        <img src="images/games36" alt="Apex Legends PC Game Download - Top Battle Royale">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
